<resources>
    <string name="app_name">CMS</string>
    <string name="label_application_Name">Construction Management System</string>
    <string name="action_settings">Settings</string>
    <string name="result_succeeded">Success</string>
    <string name="result_failed">Failure</string>
    <string name="result_failed_why">There is some error while reading.</string>
    <string name="cancel_button">Cancel</string>
    <string name="message_title">CMS</string>
    <string name="message_alert_box_ok">OK</string>
    <string name="message_need_wifi">You need wifi connection to connect the ticket server.</string>
    <string name="message_url_required">The url is required.</string>
    <string name="message_success" formatted="false">The ticket %s is passed. \r\nThank you.</string>
    <string name="message_already_used" formatted="false">The ticket %s is already used at %s on %s.</string>
    <string name="message_invalid_ticket" formatted="false">The ticket %s is invalid.</string>
    <string name="message_date_is_invalid" formatted="false">The ticket %s is only allowed between %s and %s.</string>
    <string name="message_not_exist_url">The url doesn\'t exist. Please check the server.</string>
    <string name="message_server_error">There is some error in the server. Please check the server.</string>
    <string name="message_service_link_required">Service Link is required.</string>
    <string name="message_settings_save_success">Settings is successfully saved.</string>
    <string name="message_terminal_info_update_success">Terminal information is successfully updated.</string>
    <string name="message_invalid_terminal" formatted="false">The terminal isn\'t registered in the server. You need to contact to the administrator.</string>
    <string name="message_gate_required" formatted="false">The terminal isn\'t assigned in any gate. You need to do to get terminal information.</string>
    <string name="message_confirmation_exit">Are you sure to exit?</string>
    <string name="message_confirmation_delete">Are you sure to delete?</string>
    <string name="message_date_required">Please input the date.</string>
    <string name="value_success">success</string>
    <string name="value_already_used">ticketAlreadyExist</string>
    <string name="value_invalid_ticket">invalidTicket</string>
    <string name="value_invalid_terminal">invalidTerminal</string>
    <string name="value_date_is_invalid">dateIsExpire</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="label_assignee">Assignee</string>
    <string name="label_back_camera">Back Camera</string>
    <string name="label_front_camera">Front Camera</string>
    <string name="label_sync_service_link">Sync Service Link</string>
    <string name="label_gate_id">Gate</string>
    <string name="label_phone_id">Phone Description</string>
    <string name="label_terminal_id">Terminal Id</string>
    <string name="label_settings">Settings</string>
    <string name="label_about">About</string>
    <string name="label_ticket_checking">CMS</string>
    <string name="label_project">Project</string>
    <string name="label_customer">Customer</string>
    <string name="label_project_name">Project Name</string>
    <string name="label_site_name">Site Name</string>
    <string name="label_site_task_entry">Site Task Entry</string>
    <string name="label_project_entry">Project Entry</string>
    <string name="label_start_to_check">Start To Check</string>
    <string name="label_get_terminal_id">Get Terminal Id</string>
    <string name="label_confirm_box_ok">OK</string>
    <string name="label_confirm_box_cancel">NO</string>
    <string name="label_check_ticket">Check Ticket</string>
    <string name="label_get_gate_info">Get Gate Info</string>
    <string name="label_site">Site</string>
    <string name="label_site_progress">Site Progress</string>
    <string name="label_engineer_assign">Assign Engineers</string>
    <string name="label_assign_permission">Assign Permission</string>
    <string name="label_reported_engineer">Reported Engineer</string>
    <string name="label_site_entry">Site Entry</string>
    <string name="label_purchase_orders">Purchase Orders</string>
    <string name="label_purchase_order_no">Purchase Order No.</string>
    <string name="label_purchase_order_date">Purchase Order Date</string>
    <string name="label_type_your_comment">Type your comment</string>
    <string name="label_targeted_date">Targeted Date</string>
    <string name="label_purchase_order_details">PO Details</string>
    <string name="label_purchase_order_item_details">PO Item Details</string>
    <string name="label_sites">Sites</string>
    <string name="label_manage_blue_print">Manage BluePrints</string>
    <string name="label_add_evidence">Add Evidences</string>
    <string name="label_confirm_blue_print">View BluePrints</string>
    <string name="label_site_evidence_list">Site Evidence List</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_address">Address</string>
    <string name="label_progress">Progress</string>
    <string name="label_details_description">Details Description</string>
    <string name="label_delete">Delete</string>
    <string name="label_customer_name">Customer Name</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">Email</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_blueprints">Blueprints</string>
    <string name="label_evidences">Evidences</string>
    <string name="label_take_blueprint">Take Blueprint</string>
    <string name="label_take_evidence">Take Evidence</string>
    <string name="label_role_permission">Role and Permission</string>
    <string name="label_user_assign_role">User and Assign Role</string>
    <string name="label_material_category">Material Category</string>
    <string name="label_material">Material</string>
    <string name="label_material_list">Material List</string>
    <string name="label_order_status">Received Number / Purchase Ordered Number</string>
    <string name="label_comments">Comments</string>
    <string name="label_user_name">User Name</string>
    <string name="label_separator">-</string>
    <string name="label_UOM">UOM</string>
    <string name="label_ordered_quantity">Ordered Quantity</string>
    <string name="label_received_quantity">Received Quantity</string>
    <string name="label_sub_contractor">Sub-Contractors</string>
    <string name="label_cash_flow">Cash Flow</string>
    <string name="label_selected_sub_contractor">Selected Sub-Contractors</string>
    <string name="label_choose_sub_contractor">Choose Sub-Contractors</string>
    <string name="label_sub_contractor_name">Sub-Contractor Name</string>
    <string name="label_date">Date</string>
    <string name="label_password">Password</string>
    <string name="label_task_list">Task List</string>
    <string name="label_title">Title</string>
    <string name="label_company_name">Idea Pro</string>
    <string name="label_company_service">IT Solutions and Services</string>
    <string name="label_company_message">“We are glad to work with you. We totally believe your work will be efficient with our solutions and services.”</string>
    <string name="label_company_address">No.2, First Floor (L), Pane Nae Gone St, Mingalar Taung Nyunt Tsp, Yangon.</string>
    <string name="label_company_phone">+959-795262471, +959-798484761, +959-448037148</string>
    <string name="label_company_mail">sithuphyo88@gmail.com, arkarhtetmyint@googlemail.com, yehtutaung.yha@gmail.com</string>
    <string name="label_remarks">Remarks</string>
    <string name="label_exit">Exit</string>
    <string-array name="photo_choose_item">
        <item>Take Photo</item>
        <item>Choose from library</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>1,Project</item>
        <item>1,Settings</item>
        <item>1,About us</item>
        <item>1,Exit</item>
    </string-array>
    <string-array name="materialCategories">
        <item>Material Category 1</item>
        <item>Material Category 2</item>
        <item>Material Category 3</item>
        <item>Material Category 4</item>
        <item>Material Category 5</item>
    </string-array>
    <string-array name="materials">
        <item>Material 1</item>
        <item>Material 2</item>
        <item>Material 3</item>
        <item>Material 4</item>
        <item>Material 5</item>
    </string-array>
    <string-array name="uoms">
        <item>UOM 1</item>
        <item>UOM 2</item>
        <item>UOM 3</item>
        <item>UOM 4</item>
        <item>UOM 5</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_user">User</string>
    <string name="label_role">Role</string>
    <string name="label_administration">Administration</string>
    <string name="label_general">General</string>
    <string name="label_description">Description</string>
    <string name="label_credit_amount">Credit Amount</string>
    <string name="label_paid_amount">Paid Amount</string>
    <string name="msg_search_guide">Please type you would like to search</string>
    <string name="data_no_found">There is no matched data.</string>
    <string name="select_picture">Select Picture</string>
    <string name="error_missing_category_name">Need to enter category name.</string>
    <string name="error_missing_category_description">Need to enter description.</string>
    <string name="error_missing_material">Need to enter material</string>
    <string name="error_missing_customer_name">Need to enter customer name</string>
    <string name="error_wrong_format_phone_number">Need to enter phone number correctly.</string>
    <string name="error_wrong_email_format">Need to enter email correctly.</string>
    <string name="error_missing_role_name">Need to enter role name.</string>
</resources>