<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_margin"
        tools:context=".view.SiteAddFragment">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_controls">

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_controls">

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_description"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_controls">

            <EditText
                android:id="@+id/txtStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_start_date"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_controls">

            <EditText
                android:id="@+id/txtEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_end_date"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvwAssignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_controls"
            android:text="@string/label_assignee"
            android:textSize="10dp" />

        <Spinner
            android:id="@+id/spnAssignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/spinner_height"
            android:prompt="@string/label_assignee"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginTop="@dimen/margin_between_controls"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/butBluePrint"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_blue_print_black"
                android:text="@string/label_blueprints"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/butEvidence"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_evidence"
                android:text="@string/label_evidences"
                android:theme="@style/MyButton" />
        </LinearLayout>

        <Button
            android:id="@+id/butComment"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:drawableLeft="@drawable/ic_comment"
            android:text="@string/label_comments"
            android:theme="@style/MyButton" />

    </LinearLayout>
</ScrollView>
